--- a/src/index.scss
+++ b/src/index.scss
@@ -704,12 +704,34 @@ body {
     @include box-shadow(0 0 15px rgba(0, 0, 0, 0.2));
     @include border-radius(20px);
 
+    &.opaque {
+        background: radial-gradient(circle, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.6) 75%);
+    }
+
     &.black {
         background: radial-gradient(circle, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.6) 75%);
     }
 
-    &.blue {
-        background: radial-gradient(circle, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.1) 75%);
+    &.cubic {
+        background: radial-gradient(circle, rgba(92, 140, 217, 0.3) 0%, rgba(92, 140, 217, 0.5) 75%);
+    }
+
+    &.trickshots {
+        background: radial-gradient(circle, rgba(130, 195, 86, 0.3) 0%, rgba(130, 195, 86, 0.5) 75%);
+    }
+
+    &.holochess {
+        background: radial-gradient(circle, rgba(144, 93, 56, 0.3) 0%, rgba(144, 93, 56, 0.5) 75%);
+    }
+
+    &.escape {
+        // background: radial-gradient(circle, rgba(90, 90, 90, 0.3) 0%, rgba(90, 90, 90, 0.5) 75%);
+
+        background: radial-gradient(circle, rgba(255, 158, 158, 0.3) 0%, rgba(255, 158, 158, 0.5) 75%);
+    }
+
+    &.infinityGallery {
+        background: radial-gradient(circle, rgba(184, 184, 184, 0.3) 0%, rgba(184, 184, 184, 0.5) 75%);
     }
 }
 
